# metar-forecast

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  forecast.ipynb  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
data/: Makefile
data/json/: mrlb.json  mrlm.json  mroc.json  mrpv.json
data/mrlb/: metars.csv.dvc
data/mrlm/: metars.csv.dvc
data/mroc/: .gitignore  metars.csv.dvc
data/mrpv/: metars.csv.dvc
metar_forecast/: __main__.py  downloader.py  parser.py
metar_forecast/data/MRLB/: 2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt
metar_forecast/data/MRLM/: 2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt
metar_forecast/data/MROC/: 2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2020.txt
metar_forecast/data/MRPV/: 2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt
metar_forecast/models/: console.py  logger_model.py  metar_model.py
notebooks/: experiments.ipynb
src/: __main__.py  api.py  download.py  forecast.py  scheduler.py  station.py  to_txt.py  tojson.py
static/css/: styles.css
static/templates/: forecast.html  index.html  prob_forecast.html
test/: test_metar.py
