[tool.poetry]
name = "metar-forecast"
version = "0.0.0"
description = "Meteorological reports statistical forecast"
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
click = "^7.1.2"
metar = "^1.8.0"
rich = "^9.11.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
isort = "^5.7.0"
pytest = "^6.2.2"
requests-mock = "^1.8.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
